syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "src/logger";

message SaveOriginLogRequest {
  string serviceName = 1;
  string stackTrace = 2;
  string functionName = 3;
  string ProcessId = 4;
}

message SaveServiceLogRequest {
  google.protobuf.Timestamp timestamp = 1;
  string severity = 2;
  string message = 3;
  SaveOriginLogRequest originLog = 4;
}

message SaveServiceLogResponse {
  bool success = 1;
}

service GRPCLogger {
  rpc SaveServiceLog(SaveServiceLogRequest) returns (SaveServiceLogResponse) {}
}